src/main/java/com/example/fParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class fParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, NEWLINE=3, WS=4, INDENT=5, DEDENT=6, BlockComment=7, LineComment=8, 
		WHILE=9, IF=10, ELSE=11, ELSEIF=12, ALLOC=13, ANNOTATE=14, DEF=15, PRIVDEF=16, 
		DEC=17, PRIVDEC=18, OVERRIDENDEF=19, PRIVOVERRIDENDEF=20, INHERITS=21, 
		IMPLEMENTS=22, AND=23, OR=24, NOT=25, ASSIGN=26, COMMA=27, SEMI=28, LPAREN=29, 
		RPAREN=30, LCURLY=31, RCURLY=32, LBRACKET=33, RBRACKET=34, DOT=35, PLUS=36, 
		MINUS=37, MUL=38, DIV=39, MOD=40, GT=41, LT=42, GTE=43, LTE=44, NEQ=45, 
		EQ=46, PIPE=47, FLOWASSIGN=48, QUESTIONMARK=49, CHAR=50, INTEGER=51, DECIMAL=52, 
		STRING=53, BOOLEAN=54, CUSTOMTYPE=55, NUMTYPE=56, STRINGTYPE=57, ANYTYPE=58, 
		BOOLTYPE=59, VOIDTYPE=60, NULLTYPE=61, CHARTYPE=62, ARRAYTYPE=63, MAPTYPE=64, 
		RETURNTYPESIGN=65, IDENTIFIER=66;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_simpleStatement = 2, RULE_block = 3, 
		RULE_blockStatements = 4, RULE_assignmentstatement = 5, RULE_variableassignment = 6, 
		RULE_flowvariableassignment = 7, RULE_declarationstatement = 8, RULE_variabledeclaration = 9, 
		RULE_functiondeclaration = 10, RULE_annotatedvariabledeclaration = 11, 
		RULE_initializationstatement = 12, RULE_variableinitialization = 13, RULE_annotatedvariableinitialization = 14, 
		RULE_flowvariableinitialization = 15, RULE_annotatedflowvariableinitialization = 16, 
		RULE_expressionstatement = 17, RULE_keyvaluepair = 18, RULE_param = 19, 
		RULE_definitionstatement = 20, RULE_functiondefinition = 21, RULE_classdefinition = 22, 
		RULE_interfacedefinition = 23, RULE_controlflowstatement = 24, RULE_ifstatement = 25, 
		RULE_elifstatement = 26, RULE_elsestatement = 27, RULE_whilestatement = 28, 
		RULE_type = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "simpleStatement", "block", "blockStatements", 
			"assignmentstatement", "variableassignment", "flowvariableassignment", 
			"declarationstatement", "variabledeclaration", "functiondeclaration", 
			"annotatedvariabledeclaration", "initializationstatement", "variableinitialization", 
			"annotatedvariableinitialization", "flowvariableinitialization", "annotatedflowvariableinitialization", 
			"expressionstatement", "keyvaluepair", "param", "definitionstatement", 
			"functiondefinition", "classdefinition", "interfacedefinition", "controlflowstatement", 
			"ifstatement", "elifstatement", "elsestatement", "whilestatement", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'interface'", null, null, "'INDENT'", "'DEDENT'", null, 
			null, "'while'", "'if'", "'else'", "'elif'", "'new'", "'@'", "'def'", 
			"'_def'", "'dec'", "'_dec'", "'overdef'", "'_overdef'", "'inherits'", 
			"'implements'", "'and'", "'or'", "'not'", "'='", "','", "';'", "'('", 
			"')'", "'{'", "'}'", "'['", "']'", "'.'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'>'", "'<'", "'>='", "'<='", "'!='", "'=='", "'|>'", "'|>>'", 
			"'?'", "'' . ''", null, null, null, null, null, "'num'", "'str'", "'any'", 
			"'bool'", "'void'", "'null'", "'char'", "'Arr'", "'Map'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "NEWLINE", "WS", "INDENT", "DEDENT", "BlockComment", 
			"LineComment", "WHILE", "IF", "ELSE", "ELSEIF", "ALLOC", "ANNOTATE", 
			"DEF", "PRIVDEF", "DEC", "PRIVDEC", "OVERRIDENDEF", "PRIVOVERRIDENDEF", 
			"INHERITS", "IMPLEMENTS", "AND", "OR", "NOT", "ASSIGN", "COMMA", "SEMI", 
			"LPAREN", "RPAREN", "LCURLY", "RCURLY", "LBRACKET", "RBRACKET", "DOT", 
			"PLUS", "MINUS", "MUL", "DIV", "MOD", "GT", "LT", "GTE", "LTE", "NEQ", 
			"EQ", "PIPE", "FLOWASSIGN", "QUESTIONMARK", "CHAR", "INTEGER", "DECIMAL", 
			"STRING", "BOOLEAN", "CUSTOMTYPE", "NUMTYPE", "STRINGTYPE", "ANYTYPE", 
			"BOOLTYPE", "VOIDTYPE", "NULLTYPE", "CHARTYPE", "ARRAYTYPE", "MAPTYPE", 
			"RETURNTYPESIGN", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public fParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(fParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(fParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(fParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & -2308094806844266994L) != 0 || _la==MAPTYPE || _la==IDENTIFIER) {
				{
				setState(62);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(60);
					match(NEWLINE);
					}
					break;
				case T__0:
				case T__1:
				case WHILE:
				case IF:
				case ALLOC:
				case DEF:
				case PRIVDEF:
				case DEC:
				case PRIVDEC:
				case OVERRIDENDEF:
				case PRIVOVERRIDENDEF:
				case NOT:
				case LCURLY:
				case INTEGER:
				case DECIMAL:
				case STRING:
				case BOOLEAN:
				case CUSTOMTYPE:
				case NUMTYPE:
				case STRINGTYPE:
				case ANYTYPE:
				case BOOLTYPE:
				case VOIDTYPE:
				case CHARTYPE:
				case ARRAYTYPE:
				case MAPTYPE:
				case IDENTIFIER:
					{
					setState(61);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SimpleStatementContext simpleStatement() {
			return getRuleContext(SimpleStatementContext.class,0);
		}
		public BlockStatementsContext blockStatements() {
			return getRuleContext(BlockStatementsContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ALLOC:
			case DEC:
			case PRIVDEC:
			case NOT:
			case LCURLY:
			case INTEGER:
			case DECIMAL:
			case STRING:
			case BOOLEAN:
			case CUSTOMTYPE:
			case NUMTYPE:
			case STRINGTYPE:
			case ANYTYPE:
			case BOOLTYPE:
			case VOIDTYPE:
			case CHARTYPE:
			case ARRAYTYPE:
			case MAPTYPE:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				simpleStatement();
				}
				break;
			case T__0:
			case T__1:
			case WHILE:
			case IF:
			case DEF:
			case PRIVDEF:
			case OVERRIDENDEF:
			case PRIVOVERRIDENDEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				blockStatements();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStatementContext extends ParserRuleContext {
		public DeclarationstatementContext declarationstatement() {
			return getRuleContext(DeclarationstatementContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(fParser.NEWLINE, 0); }
		public AssignmentstatementContext assignmentstatement() {
			return getRuleContext(AssignmentstatementContext.class,0);
		}
		public InitializationstatementContext initializationstatement() {
			return getRuleContext(InitializationstatementContext.class,0);
		}
		public ExpressionstatementContext expressionstatement() {
			return getRuleContext(ExpressionstatementContext.class,0);
		}
		public SimpleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterSimpleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitSimpleStatement(this);
		}
	}

	public final SimpleStatementContext simpleStatement() throws RecognitionException {
		SimpleStatementContext _localctx = new SimpleStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simpleStatement);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				declarationstatement();
				setState(74);
				match(NEWLINE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				assignmentstatement();
				setState(77);
				match(NEWLINE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				initializationstatement();
				setState(80);
				match(NEWLINE);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				expressionstatement(0);
				setState(83);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(fParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(fParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(fParser.DEDENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(NEWLINE);
			setState(88);
			match(INDENT);
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89);
				statement();
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & -2308094806844267002L) != 0 || _la==MAPTYPE || _la==IDENTIFIER );
			setState(94);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockStatementsContext extends ParserRuleContext {
		public DefinitionstatementContext definitionstatement() {
			return getRuleContext(DefinitionstatementContext.class,0);
		}
		public ControlflowstatementContext controlflowstatement() {
			return getRuleContext(ControlflowstatementContext.class,0);
		}
		public BlockStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterBlockStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitBlockStatements(this);
		}
	}

	public final BlockStatementsContext blockStatements() throws RecognitionException {
		BlockStatementsContext _localctx = new BlockStatementsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_blockStatements);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case DEF:
			case PRIVDEF:
			case OVERRIDENDEF:
			case PRIVOVERRIDENDEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				definitionstatement();
				}
				break;
			case WHILE:
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				controlflowstatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentstatementContext extends ParserRuleContext {
		public VariableassignmentContext variableassignment() {
			return getRuleContext(VariableassignmentContext.class,0);
		}
		public FlowvariableassignmentContext flowvariableassignment() {
			return getRuleContext(FlowvariableassignmentContext.class,0);
		}
		public AssignmentstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterAssignmentstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitAssignmentstatement(this);
		}
	}

	public final AssignmentstatementContext assignmentstatement() throws RecognitionException {
		AssignmentstatementContext _localctx = new AssignmentstatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignmentstatement);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				variableassignment();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				flowvariableassignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableassignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(fParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGN() { return getToken(fParser.ASSIGN, 0); }
		public ExpressionstatementContext expressionstatement() {
			return getRuleContext(ExpressionstatementContext.class,0);
		}
		public VariableassignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableassignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterVariableassignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitVariableassignment(this);
		}
	}

	public final VariableassignmentContext variableassignment() throws RecognitionException {
		VariableassignmentContext _localctx = new VariableassignmentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableassignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(IDENTIFIER);
			setState(105);
			match(ASSIGN);
			setState(106);
			expressionstatement(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FlowvariableassignmentContext extends ParserRuleContext {
		public ExpressionstatementContext expressionstatement() {
			return getRuleContext(ExpressionstatementContext.class,0);
		}
		public TerminalNode FLOWASSIGN() { return getToken(fParser.FLOWASSIGN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(fParser.IDENTIFIER, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(fParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(fParser.NEWLINE, i);
		}
		public FlowvariableassignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flowvariableassignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).enterFlowvariableassignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fListener ) ((fListener)listener).exitFlowvariableassignment(this);
		}
	}

	public final FlowvariableassignmentContext flowvariableassignment() throws RecognitionException {
		FlowvariableassignmentContext _localctx = new FlowvariableassignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_flowvariableassignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			expressionstatement(0);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(109);
				match(NEWLINE);
				}
			}

			setState(112);
			match(FLOWASSIGN);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(113);
				match(NEWLINE);
				}
			}

			setState(116);
			match(IDENTIFIER);
			}
		}
